examples/valid/read/readPair.wacc
# issues with typecasting (really want to remove this!)

# construct a pair from supplied user input
# Output:
# Please enter the first element (char): #user input 1#
# Please enter the second element (int): #user input 2#
# The first element was #repeat user input 1#
# The second element was #repeat user input 2#

#Program:#

begin
	pair(char, int) p = newpair('\0', 0) ;
	print "Please enter the first element (char): " ;
  	char c = '0';
	read c ;
  	fst p = c ;
	print "Please enter the second element (int): " ;
	int i = 0 ;
	read i ;
	snd p = i ;
	# Clear the value for c and i
	c = '\0' ;
	i = -1 ;
	print "The first element was " ;
	c = fst p ;
	println c ;
	print "The second element was " ;
	i = snd p ;
	println i 
end 
