examples/invalid/syntaxErr/pairs/badLookup02.wacc
# try to directly print pair's second element
# Output:
# #syntax error#

#Program:#

begin
	pair(int, char) p = newpair(10, 'a') ;
  println snd p
end
